deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reddit-clone-deployment
  labels:
    app: kuber-project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kuber-project
  template:
    metadata:
      labels: 
        app: kuber-project
    
    spec:
      containers:
      - name: result-app
        image: harshitsahu2311/reddit-clone-app
        ports:
        - containerPort: 3000
