service.yml
apiVersion: apps/v1
kind: Service
metadata:
  name: reddit-clone-service
  labels:
    app: kuber-project
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 31000
  selector:
    app: kuber-project
